--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "zustand",
+  "name": "zustand-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
 }
